<resources>
    <string name="app_name">Registration Bootstrap</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="facebook_app_id">YOUR FACEBOOK APP IP</string>

    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_link_to_login">Already Registered, Let\'s Login!</string>
    <string name="btnRegister">Register</string>

</resources>
